# 3-tier-arch

./: .gitignore  README.md
amd/: CMakeLists.txt  app_server.cpp
i3/: CMakeLists.txt  distributed_load_client.cpp
i5/: CMakeLists.txt
i5/data/: IDENTITY  LOG  OPTIONS-000005
